--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/MenuR_2.jar
+dist.jar=${dist.dir}/Hope.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MenuR_2
