--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MenuR_2
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\AbsoluteLayout.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\commons-logging-1.2.jar
+file.reference.groovy-2.4.5.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\groovy-2.4.5.jar
+file.reference.itext-pdfa-5.5.4.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\itext-pdfa-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\itextpdf-5.5.4.jar
+file.reference.jasperreports-6.0.0.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\jasperreports-6.0.0.jar
 file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
 file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.jcommon-1.0.21.jar=jcommon-1.0.21.jar
@@ -46,7 +54,15 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.21.jar}:\
     ${file.reference.jfreechart-1.0.17.jar}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}
+    ${file.reference.mysql-connector-java-8.0.15.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.groovy-2.4.5.jar}:\
+    ${file.reference.itext-pdfa-5.5.4.jar}:\
+    ${file.reference.itextpdf-5.5.4.jar}:\
+    ${file.reference.jasperreports-6.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
