--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Hopefull
-application.vendor=hans miranda
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Hopefull.jar
+dist.jar=${dist.dir}/Hope.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MenuR_2
-endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\AbsoluteLayout.jar
 file.reference.commons-collections-3.2.1.jar=C:\\Users\\Ivan\\Desktop\\Librerias\\commons-collections-3.2.1.jar
@@ -49,8 +47,9 @@ file.reference.jcommon-1.0.21.jar=jcommon-1.0.21.jar
 file.reference.jfreechart-1.0.17.jar=jfreechart-1.0.17.jar
 file.reference.mysql-connector-java-8.0.15.jar=mysql-connector-java-8.0.15.jar
 includes=**
-jar.compress=true
+jar.compress=false
 javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.21.jar}:\
